Fix chat scroll bug with video emotes
Video emotes lower 150px will be blurry, but this is still better

--- a/res/css/cytube.css
+++ b/res/css/cytube.css
@@ -101,6 +101,11 @@
   max-width: 150px;
   max-height: 150px;
 }
+video.channel-emote, video.chat-img {
+  /* Fixes default video tag size in chat when tab unloads videos in background */
+  /* (some browsers optimization i guess) */
+  height: 150px;
+}
 
 /*
 #userpl_list li {
